[gd_scene load_steps=2 format=3 uid="uid://b1h2r4taax8w0"]

[ext_resource type="Script" path="res://player_info_widget.gd" id="1_kdsx3"]

[node name="PlayerInfoWidget" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kdsx3")

[node name="LeftArea" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = -10.0

[node name="StoneColor" type="ColorRect" parent="LeftArea"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="RightArea" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0

[node name="NicknameLabel" type="Label" parent="RightArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "닉네임"
vertical_alignment = 1
